--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+		<title>Landing Page Template - Musician</title>
+		<meta name="description" content="Template for a musician's landing page"/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
